@@ -1,5 +1,13 @@
 2014-12-14  Andreas Kling  <akling@apple.com>
 
+        Fix build even more. Not a strong performance here.
+
+        * platform/graphics/Font.cpp:
+        (WebCore::FontGlyphsCacheEntry::FontGlyphsCacheEntry):
+        (WebCore::retrieveOrAddCachedFontGlyphs):
+
+2014-12-14  Andreas Kling  <akling@apple.com>
+
         Fix build. :-|
 
         * css/CSSFunctionValue.cpp:
